[package]
name = "near"
version = "0.1.0"
edition = "2021"
author = ["Russell Wong"]

[dependencies]
base64 = "0.13.0"
bs58 = "0.4"
ed25519-dalek = "1.0"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
libsecp256k1 = "0.7"
web3-core = { path = "../core" }
