[package]
name = "solana"
version = "0.1.0"
edition = "2021"
authors = ["Russell Wong"]

[dependencies]
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
solana-sdk = { git = "https://github.com/solana-labs/solana.git", branch = "master" }
web3-core = { path = "../core" }
